[metadata]
author = Denis Khoshaba
author-email = pypi@theden.s
url = https://github.com/TheDen/netmon
description = Network monitor for linux
description-file = README.md
license = GPL-2.0
doc_files = CHANGES.txt
           README.md
classifier =
    Operating System :: POSIX :: Linux
		Topic :: System :: Networking :: Monitoring
    Programming Language :: Python

